--- a/project-client/styles/base.css
+++ b/project-client/styles/base.css
@@ -15,17 +15,21 @@ a {
 
 header  {
     background-color: rgb(75, 75, 75);
-    padding: 6% 4%;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    padding: 5% 4%;
 }
 
-header a {
-    text-transform: lowercase;
+nav a {
+    color: white;
     font-size: 1.5rem;
-    margin: 5%;
-    display: inline-block;
+    font-weight: lighter;
+    margin-left: 4%;    
+    margin-bottom: 9%;
+}
+
+nav {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding-top: 9%;
+    display: none;    
 }
 
 h1 {
@@ -41,7 +45,10 @@ h1 {
 
 main {
     background-color: rgb(215, 215, 215);
-    padding: 10% 4% 16% 4%;
+}
+
+.content {
+    padding: 0 4% 16% 4%;
 }
 
 h2 {
@@ -50,21 +57,21 @@ h2 {
     text-transform: lowercase;
     text-decoration: underline;
     color: rgb(100, 100, 100);
-    margin-bottom: 5%;
+    padding-top: 10%;
+    padding-bottom: 7%;
 }
 
 .book-headers {
-    padding: 3% 0 12% 5%;
-    width: 50%;
+    padding: 4% 0 12% 5%;
     text-transform: lowercase;
 }
 
 a h3 {
-    font-size: 1.8rem;
     font-weight: lighter;
+    font-size: 1.8rem;
 }
 
-a h4 {
+a h4, h4 {
     margin-top: 2%;
     font-size: 1.3rem;
     font-weight: lighter;
@@ -73,5 +80,5 @@ a h4 {
 
 footer {
     background-color: rgb(155, 155, 155);
-    height: 10rem;
+    padding: 4%;
 }
