--- a/project-client/styles/layout.css
+++ b/project-client/styles/layout.css
@@ -1,18 +1,11 @@
-html, body {
+html {
     height: 100%;
 }
 
 body {
+    height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-header{
-    flex-shrink: 0;
-}
-
-main {
-    flex: 1 0 auto;
 }
 
 footer {
@@ -23,6 +16,7 @@ header  {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 0;    
 }
 
 nav {
@@ -37,7 +31,8 @@ nav a {
 }
 
 main {
-    position: relative;    
+    position: relative;   
+    flex: 1 0 auto; 
 }
 
 .book-listing a {
@@ -46,8 +41,8 @@ main {
 }
 
 img {
-    max-width: 128px;
-    max-height: 198px;
+    width: 128px;
+    height: 198px;
 }
 
 input, textarea {
