--- a/project-client/styles/modules.css
+++ b/project-client/styles/modules.css
@@ -10,7 +10,6 @@
 .book-listing {
     background-color: rgb(75, 75, 75);
     width: 100%;
-    max-height: 198px;
     margin-bottom: 8%;
 }
 
@@ -60,6 +59,7 @@ button {
     background-color: rgb(75, 75, 75);
     color: rgb(215, 215, 215);
     padding: 3% 7%;
+    border: none;
 }
 
 .icon-github {
@@ -74,4 +74,8 @@ button {
 #admin-actions button {
     padding: 2% 5%;
     margin: 3% 1%;
+}
+
+#search-results {
+    margin-top: 20%;
 }
