--- a/project-client/styles/modules.css
+++ b/project-client/styles/modules.css
@@ -67,7 +67,7 @@ button {
     color: rgb(75, 75, 75);
 }
 
-#admin-view h4 {
+#admin-view h4, #search-error {
     color: rgb(75, 75, 75);    
 }
 
@@ -78,4 +78,8 @@ button {
 
 #search-results {
     margin-top: 20%;
+}
+
+#search-error {
+    display: none;
 }
