--- a/project-client/styles/modules.css
+++ b/project-client/styles/modules.css
@@ -7,6 +7,11 @@
     cursor: pointer;
 }
 
+.icon-plus {
+    font-size: 2rem;
+    margin-bottom: 4%;
+}
+
 .book-listing {
     background-color: rgb(75, 75, 75);
     width: 100%;
