--- a/project-client/styles/base.css
+++ b/project-client/styles/base.css
@@ -68,12 +68,12 @@ h2 {
     box-sizing: border-box;
 }
 
-a h3 {
+.book-listing h3 {
     font-weight: lighter;
     font-size: 1.8rem;
 }
 
-a h4, h4 {
+.book-listing h4, h4 {
     text-transform: lowercase;    
     margin-top: 2%;
     font-size: 1.3rem;
